--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
 
+        // 페이지 로드 시 body를 숨김
+        document.documentElement.style.visibility = 'hidden';
+
         // 인증 상태 체크
         onAuthStateChanged(auth, (user) => {
             if (!user) {
                 window.location.replace('login.html');
+            } else {
+                document.documentElement.style.visibility = 'visible';
             }
         });
     </script>
@@ -354,21 +359,16 @@
         // 로그아웃 함수
         import { getAuth, signOut } from 'https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js';
         
-        window.addEventListener('DOMContentLoaded', () => {
-            const auth = getAuth();
-            // 페이지가 로드되면 body를 보이게 함
-            document.body.style.visibility = 'visible';
-            
-            // 로그아웃 함수를 전역으로 설정
-            window.logout = async function() {
-                try {
-                    await signOut(auth);
-                    window.location.href = 'login.html';
-                } catch (error) {
-                    console.error('로그아웃 에러:', error);
-                }
-            };
-        });
+        // 로그아웃 함수를 전역으로 설정
+        window.logout = async function() {
+            try {
+                const auth = getAuth();
+                await signOut(auth);
+                window.location.replace('login.html');
+            } catch (error) {
+                console.error('로그아웃 에러:', error);
+            }
+        };
     </script>
 
     <header>
@@ -442,7 +442,6 @@
             <div class="license-info">
                 <p>이 웹사이트는 개인적인 학습 목적으로 제작된 비영리 교육 자료 아카이브입니다.</p>
                 <p>모든 외부 자료는 해당 저작권자의 권리를 존중하며, 관련 라이선스를 준수합니다.</p>
-                <button onclick="logout()" style="margin-top: 20px; padding: 8px 16px; background: var(--text-tertiary); border: none; border-radius: 4px; color: white; cursor: pointer;">로그아웃</button>
             </div>
         </div>
     </footer>
@@ -470,8 +469,8 @@
         });
     </script>
 
-    <!-- 로그아웃 버튼 추가 -->
-    <div style="position: fixed; top: 20px; right: 20px;">
+    <!-- 로그아웃 버튼 (상단) -->
+    <div style="position: fixed; top: 20px; right: 20px; z-index: 1000;">
         <button onclick="logout()" style="padding: 8px 16px; background-color: #f44336; color: white; border: none; border-radius: 4px; cursor: pointer;">로그아웃</button>
     </div>
 </body>
