--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         // 인증 상태 체크
         onAuthStateChanged(auth, (user) => {
             if (!user) {
-                window.location.replace('login.html');
+                // 현재 페이지가 login.html이 아닐 경우에만 리다이렉트
+                if (!window.location.href.includes('login.html')) {
+                    window.location.href = window.location.origin + '/study-archive/login.html';
+                }
             } else {
                 document.documentElement.style.visibility = 'visible';
             }
