--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
         // 인증 상태 체크
         onAuthStateChanged(auth, (user) => {
             if (user) {
-                window.location.href = window.location.origin + '/study-archive/';
+                window.location.href = './index.html';
             }
         });
 
@@ -43,7 +43,7 @@
                 try {
                     await signInWithEmailAndPassword(auth, email, password);
                     // 로그인 성공 시 메인 페이지로 이동
-                    window.location.href = window.location.origin + '/study-archive/';
+                    window.location.href = './index.html';
                 } catch (error) {
                     document.getElementById('errorMessage').style.display = 'block';
                     console.error('로그인 에러:', error);
